--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,8 +30,11 @@
                 "ms-python.isort",
                 "ms-python.vscode-pylance",
                 "ms-python.debugpy",
+                "ms-vscode.cpptools",
+                "ms-vscode.cpptools-extension-pack",
                 "tamasfe.even-better-toml",
-                "vadimcn.vscode-lldb"
+                "vadimcn.vscode-lldb",
+                "ms-vscode.cpptools-themes"
             ],
             "settings": {
                 "search.exclude": {}
