--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,21 +20,27 @@
     ],
     "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind",
     "workspaceFolder": "/workspace",
+    "remoteEnv": {
+        "WORKSPACE_ROOT": "/workspace",
+        "WORKSPACE_BUILD_ROOT": "/workspace/build"
+    },
     "customizations": {
         "vscode": {
             "extensions": [
                 "github.copilot",
                 "github.vscode-github-actions",
                 "ms-azuretools.vscode-docker",
-                "ms-python.python",
-                "ms-python.isort",
-                "ms-python.vscode-pylance",
                 "ms-python.debugpy",
-                "ms-vscode.cpptools",
+                "ms-python.isort",
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "ms-vscode.cmake-tools",
                 "ms-vscode.cpptools-extension-pack",
+                "ms-vscode.cpptools-themes",
+                "ms-vscode.cpptools",
+                "ms-vscode.makefile-tools",
                 "tamasfe.even-better-toml",
-                "vadimcn.vscode-lldb",
-                "ms-vscode.cpptools-themes"
+                "vadimcn.vscode-lldb"
             ],
             "settings": {
                 "search.exclude": {}
