[env] Switch to ubuntu

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,33 +1,42 @@
-FROM alpine:latest
-
-RUN echo "https://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
+FROM ubuntu:24.04
 
 # Update indexes
-RUN apk update && apk add \
-    bash \
-    build-base \
+RUN apt-get update && apt-get install -y \
+    ca-certificates \
+    build-essential \
     clang \
-    clang-extra-tools \
-    coreutils \
+    clang-tools \
+    clang-tidy \
+    clang-format \
+    cmake \
     curl \
     gdb \
-    git \
-    github-cli \
-    gtest \
-    gtest-dev \
-    lld \
     lldb \
-    make \
-    openssh-client \
+    git \
     sudo \
     vim \
-    tar
+    libgtest-dev
 
-# Configure default user
+# Build GTest
+RUN cd /usr/src/gtest && \
+    cmake . &&\
+    make && \
+    cp lib/*.a /usr/lib && \
+    mkdir /usr/local/lib/googletest && \
+    ln -s /usr/lib/libgtest.a /usr/local/lib/googletest/libgtest.a && \
+    ln -s /usr/lib/libgtest_main.a /usr/local/lib/googletest
+
+## Configure default user
 ARG HOST_USER
 ENV REMOTE_USER=${HOST_USER:-lcdev}
 
-# Default EDITOR
+ARG HOST_UID
+ENV REMOTE_UID=${HOST_UID:-1000}
+
+ARG HOST_GID
+ENV REMOTE_GID=${HOST_GID:-1000}
+
+## Default EDITOR
 ENV EDITOR=vim
 
 ENV LC_TOOLS=/opt/lc
@@ -35,10 +44,9 @@ RUN mkdir -p ${LC_TOOLS}
 ADD .devcontainer/artifacts ${LC_TOOLS}
 
 
-# Add the current user mapped to the ids of the local git repository user
-RUN adduser -D ${REMOTE_USER}  -s /bin/bash
-RUN adduser $REMOTE_USER wheel
-RUN echo "$REMOTE_USER ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/$REMOTE_USER && chmod 0440 /etc/sudoers.d/$REMOTE_USER
-RUN echo "wheel ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers.d/wheel
-
-RUN echo "PS1='\[\e[1;32m\]\u@\h \[\e[1;34m\]\w \$\[\e[0m\] '" >> /etc/bash/bashrc
+## Add the current user mapped to the ids of the local git repository user
+RUN userdel -fr ubuntu || true
+RUN groupadd --gid ${REMOTE_GID} ${REMOTE_USER} || true
+RUN useradd -m --uid ${REMOTE_UID} --gid ${REMOTE_GID} ${REMOTE_USER} -s /bin/bash
+RUN usermod -a -G sudo ${REMOTE_USER}
+RUN passwd -d ${REMOTE_USER}
