--- a/.github/workflows/build-env.yml
+++ b/.github/workflows/build-env.yml
@@ -26,5 +26,6 @@ jobs:
         run: |
           docker build -t build-env-test -f .devcontainer/Dockerfile .
 
-
-      
+      - name: Run tests
+        run: |
+          docker run --rm -v "$(pwd)":/workspace build-env-test bash /workspace/problemset/test_all.sh
