[dev] Group the Makefile vars

--- a/problemset/0003.LongestSubStringNoRepeat/Makefile
+++ b/problemset/0003.LongestSubStringNoRepeat/Makefile
@@ -1,11 +1,4 @@
-WORKSPACE_BUILD_ROOT ?= /tmp
-
-# Compiler and flags
-CXX=clang++
-TIDY=clang-tidy
-CXX_FLAGS=-std=c++17 -Wall -Wextra -Werror -g
-CXX_LIBS=
-CXX_LIBS_TEST=-lgtest -lgtest_main
+include ../vars.mk
 
 # Output directories and files
 OUTPUT_FOLDER=$(WORKSPACE_BUILD_ROOT)/$(notdir $(CURDIR))
