--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,8 @@
         "sstream": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "chrono": "cpp",
+        "cstring": "cpp"
     }
 }
