[libs/trie] Add remove functionality

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "args": [
                 "-C",
                 "${fileDirname}",
-                "build"
+                "rebuild"
             ],
             "group": {
                 "kind": "build",
