--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -17,7 +17,7 @@ env:
   REGISTRY: ghcr.io
   REPOSITORY: ${{ github.repository_owner }}
   IMAGE_NAME: calcaura-lc-build-env
-  VERSION: 1.0.1
+  VERSION: 1.0.2 # Add abseil & benchmark
 
 jobs:
   build-and-push-image:
